# wigreen_prpl_app

./: .env  .gitignore  README.md  pyproject.toml  pytest.ini  wigreen-py_v1.0.0.bb  wigreen_orchestrator.bb
files/: orchestrator.py  script.sh  start.sh
files/poc/mqtt/: __init__.py
files/poc/mqtt/basic/: __init__.py  mqtt_publisher_test.py  mqtt_subscriber_test.py
files/poc/mqtt/interface/: __init__.py  mqtt_publisher_test.py
files/poc/usp/: __init__.py  test_usp.py  test_usp_basic.py  test_usp_set_wifi_status.py
files/server/: __init__.py  app.py  extension.py  test_usp.py
files/server/common/: __init__.py
files/server/common/exception/: __init__.py  code.py  handler.py  model.py
files/server/config/: general-config-development.json  general-config.json  general-config.yml  logging-config.json  logging-config.yml  wifi-datamodel.json
files/server/interfaces/amx_usp_interface/: __init__.py  service.py
files/server/interfaces/mqtt_interface/: __init__.py  client.py  model.py
files/server/managers/: __init__.py
files/server/managers/electrical_panel_manager/: __init__.py  service.py
files/server/managers/mqtt_manager/: __init__.py  service.py
files/server/managers/wifi_bands_manager/: __init__.py  service.py
files/server/rest_api/: __init__.py
files/server/rest_api/electrical_panel_controller/: __init__.py  rest_controller.py
files/server/rest_api/mqtt_controller/: __init__.py  rest_controller.py
files/server/rest_api/wifi_controler/: __init__.py  rest_controler.py
files/tests/: conftest.py
files/tests/mqtt/: __init__.py
(+25 files in other folders)
