[tool.poetry]
name = "wigreen-prpl-app"
version = "0.1.0"
description = ""
authors = ["Nicolas44Hernandez <n44hernandezp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.9"
paho-mqtt = "1.5.1"
flask = "2.0.1"
werkzeug = "2.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
black = "^24.10.0"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
